--- a/package.JSON
+++ b/package.JSON
@@ -9,21 +9,16 @@
         "camelcase": "^6.3.0",
         "chalk": "^5.0.1",
         "concurrently": "^7.1.0",
+        "express": "^4.17.3",
         "lodash": "^4.17.21"
     },
-
     "author": "Judith koelewijn",
     "license": "MIT",
     "engines": {
         "node": "14.x"
     },
-
     "scripts": {
         "dev": "nodemon index.js",
         "start": "node index.js"
-
     }
-    
-
-
 }
