--- a/package.JSON
+++ b/package.JSON
@@ -9,6 +9,7 @@
         "camelcase": "^6.3.0",
         "chalk": "^5.0.1",
         "concurrently": "^7.1.0",
+        "ejs": "^3.1.7",
         "express": "^4.17.3",
         "lodash": "^4.17.21"
     },
