--- a/package.JSON
+++ b/package.JSON
@@ -5,16 +5,18 @@
     "version": "1.0.0",
     "engines": {
         "node": "18.x"
-      },
+    },
     "description": "boilerplate setup 1",
     "main": "index.js",
     "dependencies": {
         "camelcase": "^6.3.0",
         "chalk": "^5.0.1",
         "concurrently": "^7.1.0",
+        "dotenv": "^16.0.1",
         "ejs": "^3.1.7",
         "express": "^4.17.3",
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "mongoose": "^6.3.3"
     },
     "author": "Judith koelewijn",
     "license": "MIT",
