--- a/package.JSON
+++ b/package.JSON
@@ -16,6 +16,7 @@
         "ejs": "^3.1.7",
         "express": "^4.17.3",
         "lodash": "^4.17.21",
+        "mongodb": "^4.6.0",
         "mongoose": "^6.3.3"
     },
     "author": "Judith koelewijn",
