--- a/package.JSON
+++ b/package.JSON
@@ -9,6 +9,7 @@
     "description": "boilerplate setup 1",
     "main": "index.js",
     "dependencies": {
+        "arrayify": "^1.0.0",
         "camelcase": "^6.3.0",
         "chalk": "^5.0.1",
         "concurrently": "^7.1.0",
