--- a/package.JSON
+++ b/package.JSON
@@ -6,7 +6,7 @@
     "engines": {
         "node": "18.x"
     },
-    "description": "boilerplate setup 1",
+    "description": "wandelmatch",
     "main": "index.js",
     "dependencies": {
         "arrayify": "^1.0.0",
@@ -17,8 +17,8 @@
         "ejs": "^3.1.7",
         "express": "^4.17.3",
         "lodash": "^4.17.21",
-        "mongodb": "^4.6.0",
-        "mongoose": "^6.3.3"
+        "mongodb": "^4.6.0"
+       
     },
     "author": "Judith koelewijn",
     "license": "MIT",
