changed node version

--- a/package.JSON
+++ b/package.JSON
@@ -4,7 +4,7 @@
     "url": "https://github.com/judithkoelewijn",
     "version": "1.0.0",
     "engines": {
-        "node": "18.x"
+        "node": "18.0.0"
     },
     "description": "wandelmatch",
     "main": "index.js",
