--- a/package.JSON
+++ b/package.JSON
@@ -4,7 +4,8 @@
     "url": "https://github.com/judithkoelewijn",
     "version": "1.0.0",
     "engines": {
-        "node": "18.0.0"
+        "node": "18.0.0",
+        "npm": "8.7.0"
     },
     "description": "wandelmatch",
     "main": "index.js",
